--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     margin: 0;
     min-height: 100vh;
     /* background: #000; */
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 5%;
+    padding-right: 5%;
     background-color: #fff;
 }
 .flexbox{
@@ -15,6 +15,11 @@ body {
 }
 ul li{
     color:rgb(92, 91, 91);
+    font-size: 1.5rem; 
+    font-family: 'Roboto', sans-serif;
+}
+.image{
+    width: 100%;
 }
 /* .left{
     float:left;
