--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ ul li{
 .cfont{
     font-size: 2.5rem; font-family: 'Roboto', sans-serif;
 }
-.ctfont{
+.pfont{
     font-size: 1.5rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
 }
 .ch4{
@@ -32,6 +32,11 @@ ul li{
 }
 p{
     text-align: justify;
+}
+.card{
+    padding: 0 30px 0 30px ;
+    border: 1px solid black;
+    margin: 30px;
 }
 /* .left{
     float:left;
