--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     min-height: 100vh;
     /* background: #000; */
+    padding-top: 5%;
     padding-left: 5%;
     padding-right: 5%;
     background-color: #fff;
@@ -15,28 +16,37 @@ body {
 }
 ul li{
     color:rgb(122, 121, 121);
-    font-size: 1.5rem; 
+    font-size: 2rem; 
     font-family: 'Roboto', sans-serif;
 }
 .cfont{
-    font-size: 2.5rem; font-family: 'Roboto', sans-serif;
-}
-.pfont{
-    font-size: 1.5rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
-}
-.ch4{
-    font-size: 2.5rem; font-family: 'Roboto', sans-serif;
-}
-.image{
-    width: 100%;
+    font-size: 3.5rem; font-family: 'Roboto', sans-serif;
 }
 p{
     text-align: justify;
 }
+.pfont{
+    font-size: 2rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
+}
+.pfontnormal{
+    font-size: 2rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
+}
+.ch4{
+    font-size: 3.5rem; font-family: 'Roboto', sans-serif;
+     margin-top: 0px;
+    margin-bottom: 0px;
+}
+.image{
+    width: 100%;
+}
+
 .card{
     padding: 0 30px 0 30px ;
-    border: 1px solid black;
+    border: 1px solid rgb(209, 208, 208);
     margin: 30px;
+}
+.cardimage{
+    padding-top: 10px;;
 }
 /* .left{
     float:left;
