--- a/style.css
+++ b/style.css
@@ -16,23 +16,23 @@ body {
 }
 ul li{
     color:rgb(122, 121, 121);
-    font-size: 2rem; 
+    font-size: 1.5rem; 
     font-family: 'Roboto', sans-serif;
 }
 .cfont{
-    font-size: 3.5rem; font-family: 'Roboto', sans-serif;
+    font-size: 3rem; font-family: 'Roboto', sans-serif;
 }
 p{
     text-align: justify;
 }
 .pfont{
-    font-size: 2rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
+    font-size: 1.5rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
 }
 .pfontnormal{
-    font-size: 2rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
+    font-size: 1.5rem; font-family: 'Roboto', sans-serif; color:rgb(122, 121, 121);
 }
 .ch4{
-    font-size: 3.5rem; font-family: 'Roboto', sans-serif;
+    font-size: 3rem; font-family: 'Roboto', sans-serif;
      margin-top: 0px;
     margin-bottom: 0px;
 }
@@ -47,6 +47,10 @@ p{
 }
 .cardimage{
     padding-top: 10px;;
+}
+h1{
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 /* .left{
     float:left;
